bug scroll smooth

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link text-white" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#serviços">Serviços</a>
+            <a class="nav-link text-white" href="#servicos">Serviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#portfólio">Portfólio</a>
+            <a class="nav-link text-white" href="#portfolio">Portfólio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#contato">Contato</a>
@@ -117,7 +117,7 @@
   </div>
   
   <!-- Icon Grid -->
-  <div id="serviços">
+  <div id="servicos">
     <div class="container col-sm-8 px-4 py-5 mb-4" id="icon-grid">
       <h1 class="display-6 fw-bold lh-1 mb-2">Serviços Prestados</h1>
       
@@ -219,7 +219,7 @@
   </div>
   
   <!-- Portfólio -->
-  <div id="portfólio">
+  <div id="portfolio">
     <div class="container-orange">
       <div class="container col-sm-8 col-xxl-10 px-4 py-5 ">
         <h1 class="display-6 fw-bold lh-1 mb-1">Projetos Realizados</h1>  
